<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="me.andrescampo.abc.MainActivity" tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="0dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="8dp"
            tools:layout_constraintLeft_creator="1" android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginRight="8dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="40dp">
            <TextView
                    android:text="@string/material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewMaterial" android:layout_weight="1"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/spinnerMaterial" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="40dp">
            <TextView
                    android:text="@string/dije"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewDije" android:layout_weight="1"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/spinnerDije" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="40dp">
            <TextView
                    android:text="@string/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewType" android:layout_weight="1"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/spinnerType" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="40dp">
            <TextView
                    android:text="@string/money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewMoney" android:layout_weight="1"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/spinnerMoney" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="40dp">
            <TextView
                    android:text="@string/quantity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/textViewQuatity" android:layout_weight="1"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextQuantity" android:layout_weight="1"/>

        </LinearLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/textViewResult" android:gravity="center"
                android:textStyle="bold" android:textSize="30sp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
